--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 --
+date: 2020-08-02
 theme: minima
-title: The land of nowhere
+title: "The land of nowhere"
 author: chuadoNeblod
 email: octavio_reina14613@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
