--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ title: "The land of nowhere"
 author: chuadoNeblod
 email: octavio_reina14613@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  I wish I would have something interesting to tell to the people but actually I do not, so here I am writting the firdt words that came out of my head
-
+  "Web Page Development"
 # social links
 twitter_username: drago_guitar # DO NOT include the @ character, or else the build will fail!
 github_username:  ChuadoNeblod # DO NOT include the @ character, or else the build will fail!
